--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -16,7 +16,9 @@
 		<li th:text="${usuario.email}"></li>
 		<li th:text="${usuario.identificador}"></li>
 		<li th:text="${usuario.cuenta}"></li>
+		<li th:text="${usuario.pais.id}"></li>
 		<li th:text="${usuario.pais.codigo}"></li>
+		<li th:text="${usuario.pais.nombre}"></li>
 		<li th:text="${#calendars.format(usuario.fechaNacimiento, 'dd-MM-yyyy')}"></li>
 	</ul>
 </body>
