--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -16,6 +16,14 @@
 				<input type="checkbox" id="habilitar" th:field = "*{habilitar}">
 			</div>
 		</div>
+		<div>
+			<label>Género</label>
+			<div th:each="genero: ${genero}">
+				<input type="radio" th:field = "*{genero}" th:value="${genero}">
+				<label th:for="${#ids.prev('genero')}"  th:text="${genero}"></label>
+			</div>			
+			<div th:if = "${#fields.hasErrors('genero')}" th:errors = "*{genero}"></div>
+		</div>
 		
 		<div>
 			<label for="pais">País</label>
