--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -22,6 +22,7 @@
 		<li th:text="${#calendars.format(usuario.fechaNacimiento, 'dd-MM-yyyy')}"></li>
 		<li th:text="'Habilitado: ' + ${usuario.habilitar}"></li>
 		<li th:text="'Género: ' + ${usuario.genero}"></li>
+		<li th:text="'Valor secreto: ' + ${usuario.valorSecreto}"></li>
 	</ul>
 	
 	<div>Roles</div>
