--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -104,6 +104,8 @@
 				<input type="submit" value="Enviar">
 			</div>
 		</div>
+		
+		<input type="hidden" th:field="*{valorSecreto}">
 	</form>
 
 </body>
