--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -3,15 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-	crossorigin="anonymous">
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 
 	<div class="container">
-	<a th:href="@{/form}" class="btn btn-success btn-lg my-3">volver</a>
+		<a th:href="@{/form}" class="btn btn-success btn-lg my-3">volver</a>
 		<ul class="list-group my-2">
 			<li class="list-group-item active" th:text="${titulo}"></li>
 			<li class="list-group-item" th:text="${usuario.nombre}"></li>
@@ -34,7 +31,7 @@
 		</ul>
 
 		<ul class="list-group my-3">
-		<li class="list-group-item active" th:text="'Roles'"></li>
+			<li class="list-group-item active" th:text="'Roles'"></li>
 			<li class="list-group-item" th:each="role: ${usuario.roles}"
 				th:text="${role.id}+ ': ' + ${role.nombre} + ' => ' + ${role.role}"></li>
 		</ul>
