--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -6,10 +6,7 @@
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
-	<div class="alert alert-success">
-		<span
-			th:text="'Tiempo trascurrido: ' + ${tiempoTrasncurrido} + ' en milisegundos'"></span>
-	</div>
+	<section th:replace="componentes/tiempo :: interceptor"></section>
 	<div class="container">
 		<a th:href="@{/form}" class="btn btn-success btn-lg my-3">volver</a>
 		<ul class="list-group my-2">
